--- a/client/views/partials/findUsers.html
+++ b/client/views/partials/findUsers.html
@@ -15,7 +15,7 @@
             </div>
             <div class="span9">
                 <div class="userTable">
-                    <div class="headerTable">
+                    <div class="headerUserTable">
 
                         <div class="colTable colUser0">
                             <p>&nbsp;</p>
@@ -26,16 +26,14 @@
                         <div class="colTable colUser2">
                             <p>Last Name</p>
                         </div>
+
                         <div class="colTable colUser3">
-                            <p>Sex</p>
-                        </div>
-                        <div class="colTable colUser4">
                             <p>Workplace</p>
                         </div>
-                        <div class="colTable colUser5">
+                        <div class="colTable colUser4">
                             <p>City</p>
                         </div>
-                        <div class="colTable colUser6">
+                        <div class="colTable colUser5">
                             <p>Country</p>
                         </div>
                         <div class="clearfix"></div>
@@ -54,16 +52,14 @@
                                 <div class="colTable colUser2">
                                     <p>{{ profile.last_name }}</p>
                                 </div>
+
                                <div class="colTable colUser3">
-                                    <p>{{ profile.gender }}</p>
-                                </div>
-                               <div class="colTable colUser4">
                                     <p>{{ profile.workplace }}</p>
                                 </div>
-                               <div class="colTable colUser5">
+                               <div class="colTable colUser4">
                                     <p>{{ profile.city }}</p>
                                 </div>
-                               <div class="colTable colUser6">
+                               <div class="colTable colUser5">
                                     <p>{{ profile.country }}</p>
                                 </div>
                                </a>
